--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+.secret
 # dependencies
-/node_modules
+/**/node_modules
 /.pnp
 .pnp.js
 
@@ -9,7 +8,7 @@
 /coverage
 
 # production
-/build
+/**/build
 
 # misc
 .DS_Store
@@ -21,3 +20,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/App/src/contracts
+/App/node_modules
